clean-slate/src/snapshots/clean_slate__parse_modal__tests__snapshot_motion.snap
---
source: clean-slate/src/parse_modal.rs
expression: "Motion::parse(\"G0\".into())"

---
Ok(
    (
        LocatedSpan {
            offset: 2,
            line: 1,
            fragment: "",
            extra: (),
        },
        Rapid,
    ),
)
